--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.13",
